--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "commander": "^14.0.2",
     "openai": "^4.77.3",
-    "keytar": "^7.9.0"
+    "keytar": "^7.9.0",
+    "clipboardy": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
