--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "megabuff",
   "version": "0.1.1",
-  "description": "AI-powered prompt optimizer CLI with BYOK (Bring Your Own Key) support for OpenAI",
+  "description": "AI-powered prompt optimizer CLI with BYOK (Bring Your Own Key) support for OpenAI and Anthropic",
   "type": "module",
   "main": "./dist/index.js",
   "scripts": {
@@ -15,6 +15,8 @@
     "prompt",
     "optimizer",
     "openai",
+    "anthropic",
+    "claude",
     "cli",
     "chatgpt",
     "prompt-engineering",
@@ -33,6 +35,7 @@
   },
   "homepage": "https://github.com/thesupermegabuff/megabuff-cli#readme",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "commander": "^14.0.2",
     "openai": "^4.77.3",
     "keytar": "^7.9.0",
