--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.1",
     "@google/generative-ai": "^0.21.0",
+    "chalk": "^5.3.0",
     "commander": "^14.0.2",
     "openai": "^4.77.3",
     "keytar": "^7.9.0",
