--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "command-line"
   ],
   "author": "thesupermegabuff <your.email@example.com>",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/thesupermegabuff/megabuff-cli.git"
